--- a/ggeo/tests/CMakeLists.txt
+++ b/ggeo/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 set(name GGeoTest)
-project(${name})
+project(${name} VERSION 0.1.0)
 
 
 set(TEST_SOURCES
@@ -90,8 +90,8 @@ foreach(TEST_CC_SRC ${TEST_SOURCES})
     get_filename_component(TGT ${TEST_CC_SRC} NAME_WE)
     add_executable(${TGT} ${TEST_CC_SRC})
     add_test(${name}.${TGT} ${TGT})
-    add_dependencies(check ${TGT})
-    target_link_libraries(${TGT} ${LIBRARIES} GGeo)
+    #add_dependencies(check ${TGT})
+    target_link_libraries(${TGT} GGeo)
     install(TARGETS ${TGT} DESTINATION lib)
 endforeach()
 
@@ -108,9 +108,6 @@ install(FILES ${PY_TEST_SOURCES} DESTINATION lib
             WORLD_WRITE GROUP_WRITE OWNER_WRITE 
             WORLD_EXECUTE GROUP_EXECUTE OWNER_EXECUTE 
  )
-
-
-
 
 
 
