--- a/opticksgeo/CMakeLists.txt
+++ b/opticksgeo/CMakeLists.txt
@@ -1,98 +1,32 @@
-cmake_minimum_required(VERSION 2.6.4 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 set(name OpticksGeometry)
-project(${name})
+project(${name} VERSION 0.1.0)
 
 include(EnvBuildOptions)
 include(EnvCompilationFlags)   
 
-find_package(GLM REQUIRED)
-find_package(PLog REQUIRED)
-find_package(OpticksBoost REQUIRED)
+include(GNUInstallDirs)
+set(CMAKE_INSTALL_INCLUDEDIR "include/${name}")
 
-find_package(SysRap REQUIRED)
-find_package(BoostRap REQUIRED)
-find_package(NPY REQUIRED)
-find_package(OpticksCore REQUIRED)
+find_package(BCM)
+include(BCMDeploy)
 
-set(BASE_INCLUDES
-   ${GLM_INCLUDE_DIRS} 
-   ${PLog_INCLUDE_DIRS} 
-   ${OpticksBoost_INCLUDE_DIRS} 
-   ${SysRap_INCLUDE_DIRS}
-   ${BoostRap_INCLUDE_DIRS}
-   ${NPY_INCLUDE_DIRS} 
-   ${OpticksCore_INCLUDE_DIRS} 
-)
-set(BASE_LIBRARIES
-   ${GLM_LIBRARIES}
-   ${PLog_LIBRARIES}
-   ${OpticksBoost_LIBRARIES}
-   ${SysRap_LIBRARIES}
-   ${BoostRap_LIBRARIES}
-   ${NPY_LIBRARIES}
-   ${OpticksCore_LIBRARIES}
-)
-set(BASE_DEFINITIONS
-   ${GLM_DEFINITIONS} 
-   ${PLog_DEFINITIONS} 
-   ${OpticksBoost_DEFINITIONS} 
-   ${SysRap_DEFINITIONS}
-   ${BoostRap_DEFINITIONS}
-   ${NPY_DEFINITIONS}
-   ${OpticksCore_DEFINITIONS}
-)
+#[==[
+              SysRap : BCM PLog 
+              OKConf : BCM SysRap OptiX G4 
+            BoostRap : BCM Boost PLog SysRap 
+                 NPY : BCM GLM PLog OpenMesh SysRap BoostRap YoctoGL ImplicitMesher DualContouringSample 
+         OpticksCore : BCM OKConf NPY 
+                GGeo : BCM OpticksCore 
+           AssimpRap : BCM OpticksAssimp GGeo 
+         OpenMeshRap : BCM GGeo OpticksCore 
+     OpticksGeometry : OpticksCore AssimpRap OpenMeshRap  
 
-########### GEOMETRY #####
+#]==]
 
-find_package(OpticksAssimp REQUIRED)
-find_package(AssimpRap REQUIRED)
-find_package(OpenMesh REQUIRED)
-find_package(OpenMeshRap REQUIRED)
-find_package(GGeo REQUIRED)
-
-set(GEOMETRY_INCLUDES
-   ${OpticksAssimp_INCLUDE_DIRS}  
-   ${AssimpRap_INCLUDE_DIRS}  
-   ${OpenMesh_INCLUDE_DIRS}  
-   ${OpenMeshRap_INCLUDE_DIRS}  
-   ${GGeo_INCLUDE_DIRS}  
-)
-set(GEOMETRY_LIBRARIES
-   ${OpticksAssimp_LIBRARIES} 
-   ${AssimpRap_LIBRARIES} 
-   ${OpenMesh_LIBRARIES} 
-   ${OpenMeshRap_LIBRARIES} 
-   ${GGeo_LIBRARIES} 
-)
-set(GEOMETRY_DEFINITIONS
-   ${OpticksAssimp_DEFINITIONS}  
-   ${AssimpRap_DEFINITIONS}  
-   ${OpenMesh_DEFINITIONS}  
-   ${OpenMeshRap_DEFINITIONS}  
-   ${GGeo_DEFINITIONS}  
-)
-
-########## ALL #####
-
-set(INCLUDES
-   ${CMAKE_CURRENT_SOURCE_DIR}
-   ${BASE_INCLUDES}
-   ${GEOMETRY_INCLUDES}
-)
-set(DEFINITIONS 
-   ${BASE_DEFINITIONS}
-   ${GEOMETRY_DEFINITIONS}
-)
-set(LIBRARIES 
-   ${BASE_LIBRARIES}
-   ${GEOMETRY_LIBRARIES}
-)
-
-#message("INCLUDES:${INCLUDES}")
-
-include_directories(${INCLUDES})
-add_definitions(${DEFINITIONS})
-
+find_package(OpticksCore REQUIRED CONFIG)
+find_package(AssimpRap   REQUIRED CONFIG)
+find_package(OpenMeshRap REQUIRED CONFIG)
 
 set(SOURCES
 
@@ -119,14 +53,14 @@ set(HEADERS
     OpticksIdx.hh
 )
 
+add_library( ${name}  SHARED ${SOURCES})
+target_include_directories( ${name} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> )
+target_link_libraries( ${name} PUBLIC  Opticks::OpticksCore Opticks::AssimpRap Opticks::OpenMeshRap )
 
-
-add_library(${name} SHARED ${SOURCES} )
-target_link_libraries( ${name} ${LIBRARIES})
-
-install(TARGETS ${name}  DESTINATION lib)
-install(FILES ${HEADERS} DESTINATION include/${name})
+bcm_deploy(TARGETS ${name} NAMESPACE Opticks:: SKIP_HEADER_INSTALL)
+install(FILES ${HEADERS}  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
 #add_subdirectory(tests EXCLUDE_FROM_ALL)
 add_subdirectory(tests)
+
 
