--- a/opticksgeo/tests/CMakeLists.txt
+++ b/opticksgeo/tests/CMakeLists.txt
@@ -1,8 +1,6 @@
-cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 set(name OpticksGeometryTest)
-project(${name})
-
-#file(GLOB TEST_CC_SRCS "*Test.cc")
+project(${name} VERSION 0.1.0)
 
 set(TEST_SOURCES
     OpticksGeometryTest.cc
@@ -10,18 +8,14 @@ set(TEST_SOURCES
     OpenMeshRapTest.cc
 )
 
-
-
 foreach(TEST_CC_SRC ${TEST_SOURCES})
     get_filename_component(TGT ${TEST_CC_SRC} NAME_WE)
     add_executable(${TGT} ${TEST_CC_SRC})
 
     add_test(${name}.${TGT} ${TGT})
-    add_dependencies(check ${TGT})
+    #add_dependencies(check ${TGT})
 
-    target_link_libraries(${TGT} 
-               ${LIBRARIES} OpticksGeometry
-    )
+    target_link_libraries(${TGT} OpticksGeometry)
     install(TARGETS ${TGT} DESTINATION lib)
 endforeach()
 
