bcm surmounts CUDARap after kludge fixing difficulties from the somewhat traditional CMake approach by CUDA_ADD_LIBRARY

--- a/cudarap/CMakeLists.txt
+++ b/cudarap/CMakeLists.txt
@@ -1,44 +1,20 @@
-cmake_minimum_required(VERSION 2.6.4 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 set(name CUDARap)
-project(${name})
+project(${name} VERSION 0.1.0)
 
 include(EnvBuildOptions)
 include(EnvCompilationFlags)
 
-find_package(PLog REQUIRED)
-find_package(CUDA ${OPTICKS_CUDA_VERSION} REQUIRED QUIET)
+include(GNUInstallDirs)
+set(CMAKE_INSTALL_INCLUDEDIR "include/${name}")
 
-message("${name}.CUDA_curand_LIBRARY:${CUDA_curand_LIBRARY}")
-
-find_package(SysRap REQUIRED)
-
+find_package(BCM)
+include(BCMDeploy)
 
 ## NB NO BOOST 
-set(INCLUDE_DIRS
-    ${CMAKE_CURRENT_SOURCE_DIR}
-    ${PLog_INCLUDE_DIRS}
-    ${CUDA_INCLUDE_DIRS}
-    ${SysRap_INCLUDE_DIRS}
-)
-set(DEFINITIONS
-   ${PLog_DEFINITIONS}
-   ${SysRap_DEFINITIONS}
-)
-include_directories(${INCLUDE_DIRS})
-add_definitions(${DEFINITIONS})
+find_package(SysRap REQUIRED CONFIG)
+find_package(OpticksCUDA REQUIRED MODULE)
 
-set(LIBRARIES
-   ${PLog_LIBRARIES}
-   ${CUDA_LIBRARIES} 
-   ${CUDA_curand_LIBRARY}
-   ${SysRap_LIBRARIES}
-)
-message("${name}.CUDA_LIBRARIES : ${CUDA_LIBRARIES} ")
-#message("${name}.SysRap_LIBRARIES : ${SysRap_LIBRARIES} ")
-
-if(UNIX)
-  set(LIBRARIES ${LIBRARIES} ssl )  
-endif(UNIX)
 
 set(SOURCES
     CUDARAP_LOG.cc
@@ -67,17 +43,28 @@ SET(HEADERS
     CBufSlice.hh
 )
 
+set(LIBRARIES
+   Opticks::SysRap
+   Opticks::CUDA
+)
+if(UNIX)
+  set(LIBRARIES ${LIBRARIES} ssl )  
+endif(UNIX)
 
+message("${name}.LIBRARIES : ${LIBRARIES} ")
 
-CUDA_ADD_LIBRARY( ${name} ${SOURCES} OPTIONS  )
-target_link_libraries(${name} ${LIBRARIES} )
+CUDA_ADD_LIBRARY( ${name} ${SOURCES} )
+set_target_properties(${name}  PROPERTIES INTERFACE_LINK_LIBRARIES "" ) # kludge clear
+target_link_libraries( ${name} ${LIBRARIES})
+target_include_directories( ${name} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> )
 
-set(LIBRARIES ${LIBRARIES} ${name} )  
+include(EchoTarget)
+echo_target_std(${name})
 
 install(TARGETS ${name} LIBRARY DESTINATION lib)
-install(FILES ${HEADERS} DESTINATION include/${name})
+install(FILES ${HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
-#add_subdirectory(tests EXCLUDE_FROM_ALL)
+bcm_deploy(TARGETS ${name} NAMESPACE Opticks:: SKIP_HEADER_INSTALL)
+
 add_subdirectory(tests)
-
 
