--- a/cudarap/tests/CMakeLists.txt
+++ b/cudarap/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 set(name CUDARapTest)
-project(${name})
+project(${name} VERSION 0.1.0)
 
 #message("${name}.INCLUDE_DIRS : ${INCLUDE_DIRS}")
 message("${name}.LIBRARIES    : ${LIBRARIES}")
@@ -9,16 +9,14 @@ set(TEST_SOURCES
    LaunchSequenceTest.cc
    cuRANDWrapperTest.cc
    curand_aligned_host.cc
- 
-   
 )
 
 foreach(SRC ${TEST_SOURCES})
     get_filename_component(TGT ${SRC} NAME_WE)
     add_executable(${TGT} ${SRC})
     add_test(${name}.${TGT} ${TGT})
-    add_dependencies(check ${TGT})
-    target_link_libraries(${TGT} ${LIBRARIES}  )
+    #add_dependencies(check ${TGT})
+    target_link_libraries(${TGT} CUDARap )
     install(TARGETS ${TGT} DESTINATION lib)
 endforeach()
 
@@ -33,9 +31,9 @@ foreach(CU ${TEST_SOURCES_CU})
     get_filename_component(TGT ${CU} NAME_WE)
     cuda_add_executable(${TGT} ${CU} OPTIONS)
     add_test(${name}.${TGT} ${TGT})
-    add_dependencies(check ${TGT})
+    #add_dependencies(check ${TGT})
 
-    target_link_libraries(${TGT} ${LIBRARIES} )
+    target_link_libraries(${TGT} CUDARap )
     install(TARGETS ${TGT} DESTINATION lib)
 endforeach()
 
