--- a/optixrap/tests/CMakeLists.txt
+++ b/optixrap/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 set(name OptiXRapTest)
-project(${name})
+project(${name} VERSION 0.1.0)
 
 set(TEST_SOURCES
     OPropertyLibTest.cc
@@ -31,9 +31,9 @@ foreach(SRC ${TEST_SOURCES})
     add_executable(${TGT} ${SRC})
 
     add_test(${name}.${TGT} ${TGT})
-    add_dependencies(check ${TGT})
+    #add_dependencies(check ${TGT})
 
-    target_link_libraries(${TGT} ${LIBRARIES} OptiXRap)
+    target_link_libraries(${TGT} OptiXRap)
     install(TARGETS ${TGT} DESTINATION lib)
 endforeach()
 
