--- a/okop/tests/CMakeLists.txt
+++ b/okop/tests/CMakeLists.txt
@@ -1,8 +1,7 @@
-cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 set(name OKOPTest)
-project(${name})
+project(${name} VERSION 0.1.0)
 
-#file(GLOB TEST_SOURCES "*Test.cc")
 set(TEST_SOURCES
     OpIndexerTest.cc
     OpSeederTest.cc
@@ -16,8 +15,8 @@ foreach(SRC ${TEST_SOURCES})
     add_executable(${TGT} ${SRC})
 
     add_test(${name}.${TGT} ${TGT})
-    add_dependencies(check ${TGT})
-    target_link_libraries(${TGT} ${LIBRARIES} OKOP)
+    #add_dependencies(check ${TGT})
+    target_link_libraries(${TGT} OKOP)
 
     install(TARGETS ${TGT} DESTINATION lib)
 endforeach()
