bcm reaches UseOGLRap

--- a/oglrap/CMakeLists.txt
+++ b/oglrap/CMakeLists.txt
@@ -1,43 +1,22 @@
-cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 set(name OGLRap)
-project(${name})
+project(${name} VERSION 0.1.0)
 
 include(EnvBuildOptions)
 include(EnvCompilationFlags)
 
-find_package(OpticksGLEW REQUIRED)
-find_package(OpticksGLFW REQUIRED)
-find_package(GLM  REQUIRED)
-find_package(PLog REQUIRED) 
-find_package(OpticksBoost REQUIRED) 
+include(GNUInstallDirs)
+set(CMAKE_INSTALL_INCLUDEDIR "include/${name}")
 
-find_package(SysRap REQUIRED)
-find_package(BoostRap REQUIRED)
-find_package(OpticksCore REQUIRED)
-find_package(GGeo REQUIRED)  
-find_package(OpticksGeometry REQUIRED)
-find_package(NPY REQUIRED) 
-find_package(ImGui REQUIRED)
+find_package(BCM)
+include(BCMDeploy)
 
-message("OGLRap.ImGui_INCLUDE_DIRS : ${ImGui_INCLUDE_DIRS}")
+find_package(ImGui REQUIRED MODULE)
+find_package(OpticksGLEW REQUIRED MODULE)
+find_package(OpticksGLFW REQUIRED MODULE)
 
-set(INCLUDE_DIRS
-   ${CMAKE_CURRENT_SOURCE_DIR}
-   ${CMAKE_CURRENT_BINARY_DIR}/inc
+find_package(OpticksGeometry REQUIRED CONFIG)
 
-   ${OpticksGLEW_INCLUDE_DIRS} 
-   ${OpticksGLFW_INCLUDE_DIRS} 
-   ${GLM_INCLUDE_DIRS} 
-   ${GGeo_INCLUDE_DIRS} 
-   ${PLog_INCLUDE_DIRS} 
-   ${OpticksBoost_INCLUDE_DIRS} 
-   ${OpticksCore_INCLUDE_DIRS}
-   ${OpticksGeometry_INCLUDE_DIRS}
-   ${NPY_INCLUDE_DIRS}
-   ${SysRap_INCLUDE_DIRS} 
-   ${BoostRap_INCLUDE_DIRS} 
-   ${ImGui_INCLUDE_DIRS}
-) 
 
 # generate define header for hardcoding in the library 
 set(OGLRAP_INSTALL_PREFIX     "${CMAKE_INSTALL_PREFIX}")
@@ -46,50 +25,7 @@ set(OGLRAP_SHADER_DYNAMIC_DIR "${CMAKE_INSTALL_PREFIX}/gl")
 set(OGLRAP_SHADER_INCL_PATH   "${CMAKE_INSTALL_PREFIX}/gl")
 configure_file( Config.hh.in inc/Config.hh )
 
-
-set(DEFINITIONS
-   ${OpticksGLEW_DEFINITIONS}
-   ${OpticksGLFW_DEFINITIONS}
-   ${GGeo_DEFINITIONS}
-   ${OpticksCore_DEFINITIONS}
-   ${OpticksGeometry_DEFINITIONS}
-   ${PLog_DEFINITIONS}
-   ${OpticksBoost_DEFINITIONS}
-   ${SysRap_DEFINITIONS} 
-   ${BoostRap_DEFINITIONS} 
-   ${ImGui_DEFINITIONS}
-   -DGUI_
-)
-
-set(LIBRARIES
-   ${OpticksGLEW_LIBRARIES}
-   ${OpticksGLFW_LIBRARIES}
-   ${OpticksCore_LIBRARIES}
-   ${GGeo_LIBRARIES}
-   ${PLog_LIBRARIES}
-   ${OpticksBoost_LIBRARIES}
-   ${OpticksGeometry_LIBRARIES}
-   ${SysRap_LIBRARIES}
-   ${BoostRap_LIBRARIES}
-   ${NPY_LIBRARIES}
-   ${ImGui_LIBRARIES}
-)
-
-if(WIN32)
-   set( LIBRARIES ${LIBRARIES} opengl32.lib )
-endif(WIN32)
-
-#message("${name}.LIBRARIES : ${LIBRARIES} " )
-
-
-include_directories(${INCLUDE_DIRS})
-add_definitions(${DEFINITIONS})
-
 ## NB only classes needing OpenGL should be here 
-
-set(_SOURCES
-
-)
 
 set(SOURCES
 
@@ -163,12 +99,29 @@ SET(HEADERS
 )
 
 add_library( ${name}  SHARED ${SOURCES})
-target_link_libraries( ${name} ${LIBRARIES})
+target_link_libraries( ${name} PUBLIC 
+    Opticks::OpticksGLEW
+    Opticks::OpticksGLFW
+    Opticks::ImGui
+    Opticks::OpticksGeometry
+)
 
-install(TARGETS ${name} DESTINATION lib)
-install(FILES ${HEADERS} DESTINATION include/${name})
+if(WIN32)
+   target_link_libraries( ${name} opengl32.lib )
+endif(WIN32)
+
+
+target_include_directories( ${name} PUBLIC 
+   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> 
+   $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/inc> 
+)
+
+target_compile_definitions( ${name} PUBLIC GUI_ ) 
+
+install(FILES ${HEADERS}  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 install(DIRECTORY gl/ DESTINATION gl)
+bcm_deploy(TARGETS ${name} NAMESPACE Opticks:: SKIP_HEADER_INSTALL)
 
-#add_subdirectory(tests EXCLUDE_FROM_ALL)
 add_subdirectory(tests)
+
 
